# meet-eks

./: Cargo.toml  Justfile
bar-service/: Cargo.toml  Dockerfile  build.rs
bar-service/src/: main.rs
deploy/helm-charts/bar-service/: Chart.yaml  values.yaml
deploy/helm-charts/bar-service/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy/helm-charts/foo-service/: Chart.yaml  values.yaml
deploy/helm-charts/foo-service/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
foo-service/: Cargo.toml  Dockerfile  build.rs
foo-service/src/: main.rs
proto/: common.proto
proto/service/: bar.proto  foo.proto
